data/all_generated_tests/raw_wast_tests/if_IncorrectBranchTargetResolution_1349.wast
;; 10. **Duplicated Labels in Mixed Control Instructions**:    - Create a control flow with mixed instructions (`block`, `loop`, `if`) where labels are duplicated. Evaluate that branches resolve correctly to the intended instruction associated with those labels under mixed contexts.    - **Constraint**: Confirm context-awareness in resolving labels with duplicated indices amidst varied control instructions.

(assert_invalid
  (module
    (func $duplicated-labels-mixed-control
      (block
        (loop
          (if (block
                (br 1)
              ) (then (br 0)) (else (br 2))
            )
          )
        )
      )
    )
  "invalid label"
)